CMS-373: Fix spacing issue on active advisories page

--- a/src/gatsby/src/styles/global.scss
+++ b/src/gatsby/src/styles/global.scss
@@ -636,7 +636,7 @@ nav.breadcrumbs {
       font-weight: 700;
       color: $colorBlue;
       line-height: 1.5rem;
-      margin-left: 16px;
+      margin: 0 16px;
     }
   }
   &.advisory-accordion {
